style/fix(iFrame): player width fade overlay overlap issue

--- a/src/film-database/features/iframe/_fdiFrame.scss
+++ b/src/film-database/features/iframe/_fdiFrame.scss
@@ -17,7 +17,7 @@
     top: 0;
     right: 0;
     z-index: 1;
-    height: 62svh;
+    height: 63svh;
     aspect-ratio: 16/9;
     transform: scale(1.3);
     transform-origin: center;
